--- a/tensorboard/plugins/debug_db/tf_debugdb_dashboard/tf-debugdb-dashboard.html
+++ b/tensorboard/plugins/debug_db/tf_debugdb_dashboard/tf-debugdb-dashboard.html
@@ -53,6 +53,7 @@ by default. The user can select a different run from a dropdown menu.
         datasets="[[_datasets]]"
         render-hierarchy="[[_renderHierarchy]]"
         selection="{{_selection}}"
+        attach-param="{{attachParam}}"
         selected-file="{{_selectedFile}}"
         selected-node="{{_selectedNode}}"
         health-pills-feature-enabled="[[_debuggerDataEnabled]]"
@@ -68,6 +69,7 @@ by default. The user can select a different run from a dropdown menu.
     <tf-debugdb-dashboard-loader id="loader"
           datasets="[[_datasets]]"
           selection="[[_selection]]"
+          attach-param="{{attachParam}}"
           selected-file="[[_selectedFile]]"
           out-graph-hierarchy="{{_graphHierarchy}}"
           out-graph="{{_graph}}"
